fix code smells for controller